--- a/src/main/webapp/behavior_add.html
+++ b/src/main/webapp/behavior_add.html
@@ -1,128 +1,100 @@
-<link rel="stylesheet" href="calendar/jquery-ui.css" />
-<link rel="stylesheet" href="calendar/jquery-ui-timepicker-addon.css" />
-<script src="calendar/jquery-1.10.2.min.js"></script>
-<script src="calendar/jquery-ui.min.js"></script>
-<script src="calendar/jquery-ui-timepicker-addon.js"></script>
-<script src="calendar/jquery-ui-sliderAccess.js"></script>
 
-<div class="col-md-10" ng-app="behavior" ng-controller="behaviorController">
-    <div id="myTabContent" class="tab-content">
-        <div class="list-group">
-            <div class="list-group-item">
-                <div class="row-content">
-                    <h4 class="list-group-item-heading">เพิ่มความประพฤติ</h4>
-                    <p class="list-group-item-text">
-                    <form class="form-horizontal">
-                        <fieldset>
-                            <div class="form-group">
-                                <label for="text" class="col-lg-2 control-label">รหัสนักศึกษา</label>
-                                <div class="col-lg-10">
-                                    <input type="text" style="background: #C0F9BD" class="form-control">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="text" class="col-lg-2 control-label">นักศึกษา</label>
-                                <div class="col-lg-10">
-                                    <input type="text" style="background: #C0F9BD" class="form-control" ng-model="behavior.namestudent">
-                                </div>
-                            </div>
-                            <!--                            <div class="form-group">
-                                                            <label for="text" class="col-lg-2 control-label">ชั้นปี</label>
-                                                            <div class="col-lg-10">
-                                                                <input type="text" style="background: #C0F9BD" class="form-control">
-                                                            </div>
-                                                        </div>-->
-                            <div class="form-group">
-                                <label for="text" class="col-lg-2 control-label">วันที่-เวลา</label>
-                                <div class="col-lg-10">
-                                    <script type="text/javascript">
-                                                        $(function () {
-                                                            $("#dateInputBe").datepicker({
-                                                                dateFormat: 'dd-M-yy'
-                                                            });
-                                                        });
-                                    </script>
-                                    <input type="text" class="form-control" name="dateInputBe" id="dateInputBe" value="" style="background: #C0F9BD" ng-model="behavior.dates">
-
-                                </div>
-                            </div>
-
-                            <div class="container">
-                                <div class="panel panel-success" style="width:750px;">
-                                    <div class="panel-heading">รายการ</div>
-                                    <div class="panel-body">
-                                        <div class="form-group">
-                                            <label for="text" class="col-lg-2 control-label">ชื่อเรื่อง</label>
-                                            <div class="col-lg-10">
-                                                <input type="text" style="width:500px;" class="form-control" ng-model="behavior.title">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="text" class="col-lg-2 control-label">รายละเอียดความประพฤติ</label>
-                                            <div class="col-lg-10">
-                                                <input type="text" style="width:500px;" class="form-control" ng-model="behavior.detail"> 
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="text" class="col-lg-2 control-label">คำอธิบาย</label>
-                                            <div class="col-lg-10">
-                                                <input type="text" style="width:500px;" class="form-control" ng-model="behavior.description">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="inputFile" class="col-lg-2 control-label">File</label>
-                                            <div class="col-lg-10">
-                                                <!--<input type="submit" id="input-picture" readonly="" class="form-control floating-label" placeholder="Browse...">-->
-                                                <input type="file" id="input-picture"> 
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-
-
-                            <div class="form-group">
-                                <center>
-                                    <button class="btn btn-success" ng-click="saveBehavior()">Save</button>
-                                    <a href="#/behavior"><button class="btn btn-danger">Cancle</button></a>
-                                </center>
-                            </div>
-                        </fieldset>
-                    </form>
-                    </p>                                       
-                </div>
-            </div>
+<div class="col-md-10">
+    <br>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="list-group-item-heading">เพิ่มความประพฤติ</h4>
+        </div>
+        <div class="panel-body">
+            <p class="list-group-item-text">
+            <form class="form-horizontal">
+                <fieldset>
+                    <div class="form-group">
+                        <label for="text" class="col-lg-2 control-label">นักศึกษา</label>
+                        <div class="col-lg-10">
+                            <input type="text"  class="form-control" ng-model="behavior.namestudent">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="text" class="col-lg-2 control-label">วันที่-เวลา</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" name="dateInputBe" ng-model="behavior.dates">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="text" class="col-lg-2 control-label">ชื่อเรื่อง</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" ng-model="behavior.title">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="text" class="col-lg-2 control-label">รายละเอียดความประพฤติ</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" ng-model="behavior.detail"> 
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="text" class="col-lg-2 control-label">คำอธิบาย</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" ng-model="behavior.description">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputFile" class="col-lg-2 control-label">File</label>
+                        <div class="col-lg-10">
+                            <!--<input type="submit" id="input-picture" readonly="" class="form-control floating-label" placeholder="Browse...">-->
+                            <input type="file" id="input-picture"> 
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <center>
+                            <button class="btn btn-success" ng-click="saveBehavior()">Save</button>
+                            <a href="#/behavior"><button class="btn btn-danger">Cancle</button></a>
+                        </center>
+                    </div>
+                </fieldset>
+            </form>
+            </p> 
         </div>
     </div>
+
+
+
+
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">ความประพฤติ</h3>
         </div>
         <div class="panel-body">
-            <table class="table table-striped table-hover ">
+            <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>ลำดับ</th>
-                        <th>รหัสนักศึกษา</th>
                         <th>ชื่อนักศึกษา</th>
                         <th>วันที่</th>
-                        <th>หัวข้อ</th>
+                        <th>ชื่อเรื่อง</th>
+                        <th>รายละเอียดความประพฤติ</th>
+                        <th>คำอธิบาย</th>
+                        <th>File</th>
                         <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr ng-repeat="beha in behaviorshow.content">
-                        <th>{{beha.id}}</th>
-                        <th> </th>
-                        <th>{{beha.namestudent}}</th>
-                        <th>{{beha.dates}}</th>
-                        <th>{{beha.title}}</th>
-                        <th>
-                            <button class="btn" ng-click="deleteBehavior(beha)">
-                                <span class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp;Delete
+                        <td>{{beha.namestudent}}</td>
+                        <td>{{beha.dates}}</td>
+                        <td>{{beha.title}}</td>
+                        <td>{{beha.detail}}</td>
+                        <td>{{beha.description}}</td>
+                        <td>
+                            <button>
+                            <span class="mdi-file-file-download"></span>
                             </button>
-                        </th>
+                        </td>
+                        <td>
+                            <button ng-click="deleteBehavior(beha)">
+                                <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                            </button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
