--- a/src/main/webapp/behavior_add.html
+++ b/src/main/webapp/behavior_add.html
@@ -92,7 +92,7 @@
                         </td>
                         <td>
                             <button ng-click="deleteBehavior(beha)">
-                                <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                <span class="mdi-action-delete"></span>
                             </button>
                         </td>
                     </tr>
