--- a/src/main/webapp/admin_add_information.html
+++ b/src/main/webapp/admin_add_information.html
@@ -38,11 +38,11 @@
                 <label for="text" class="col-lg-2 control-label">วันเดือนปี</label>
                 <div class="col-lg-10">
                     <script type="text/javascript">
-                                $(function () {
-                                    $("#dateInputStart").datepicker({
-                                        dateFormat: 'dd-M-yy'
-                                    });
-                                });
+                        $(function () {
+                            $("#dateInputStart").datepicker({
+                                dateFormat: 'dd-M-yy'
+                            });
+                        });
                     </script>
                     <input class="form-control" type="text" name="dateInputStart" id="dateInputStart" value="" ng-model="information.startTime">
                 </div>
@@ -99,45 +99,46 @@
             </div>
         </div>
     </div>
+
     <div class="panel panel-success">
         <div class="panel-heading">
             <h3 class="panel-title">ข่าวประชาสัมพันธ์</h3>
         </div>
         <div class="panel-body">
-            <table class="table table-striped table-hover ">
-                <thead>
-                    <tr>    
-                        <th>วันที่ลงข่าว</th>
-                        <th>ชื่อเรื่อง</th>
-                        <th>file</th>
-                        <th>เนื้อหาย่อ</th>
-                        <th>รายละเอียด</th>
-                        <th>link web</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="infor in informationshow.content">                      
-                        <th>{{infor.startTime}}</th>
-                        <th>{{infor.title}}</th>
-                        <th>{{infor.file}}</th>
-                         <th>{{infor.pageBrief}}</th>
-                        <th>{{infor.description}}</th>
-                        <th>{{infor.linkWeb}}</th>
-                        <th>
-                            <button class="btn" ng-click="delInformation(infor)">
-                                <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
-                            </button>
-                        </th>
-                        <th>
-                            <button class="btn" ng-click="deleteInformation(infor)">
-                                <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
-                            </button>
-                        </th>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="form-group">
+                <table class="table table-striped table-hover ">
+                    <thead>
+                        <tr>    
+                            <th>วันที่ลงข่าว</th>
+                            <th>ชื่อเรื่อง</th>
+                            <th>file</th>
+                            <th>เนื้อหาย่อ</th>
+                            <th>รายละเอียด</th>
+                            <th>link web</th>
+                            <th>Edit</th>
+                            <th>Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="infor in informationshow.content">                      
+                            <td>{{infor.startTime}}</td>
+                            <td>{{infor.title}}</td>
+                            <td>{{infor.file}}</td>
+                            <td>{{infor.pageBrief}}</td>
+                            <td>{{infor.description}}</td>
+                            <td>{{infor.linkWeb}}</td>
+                            <td>
+                                <p class="mdi-editor-mode-edit" ng-click="delInformation(infor)">
+                                </p>
+                            </td>
+                            <td>
+                                <p class="mdi-action-delete" ng-click="deleteInformation(infor)">
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
+    </div> 
 </div>
