--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -69,9 +69,9 @@
                         <div class="btn-group-vertical">
                             <a href="#/home" class="btn btn-primary">Home</a>
                             <a href="#/admin_add_information" class="btn btn-primary">ผู้ดูแลระบบ</a>
-                            <a href="#/teacher" class="btn btn-primary">อาจารย์</a>
-                            <a href="#/student" class="btn btn-primary">นักศึกษา</a>
-                            <a href="#/parent" class="btn btn-primary">ผู้ปกครอง</a>
+                            <a href="#/teacher_show" class="btn btn-primary">อาจารย์</a>
+                            <a href="#/student_show" class="btn btn-primary">นักศึกษา</a>
+                            <a href="#/parent_show" class="btn btn-primary">ผู้ปกครอง</a>
                             <a href="#/advise" class="btn btn-primary">ข้อมูลการให้คำปรึกษา</a>
                             <a href="#/behavior" class="btn btn-primary">ข้อมูลความประพฤติ</a>
                             <a href="#/appointment" class="btn btn-primary">ข้อมูลการนัดหมาย</a>
