--- a/src/main/webapp/advise_add.html
+++ b/src/main/webapp/advise_add.html
@@ -10,9 +10,15 @@
             <form class="form-horizontal">
                 <fieldset>
                     <div class="form-group">
+                        <label for="text" class="col-lg-2 control-label">อาจารย์</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" ng-model="advise.teacher">
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="text" class="col-lg-2 control-label">นักศึกษา</label>
                         <div class="col-lg-10">
-                            <input type="text" class="form-control" ng-model="advise.idSubject">
+                            <input type="text" class="form-control" ng-model="advise.student">
                         </div>
                     </div>
                     <div class="form-group">
@@ -37,7 +43,6 @@
                         <label for="text" class="col-lg-2 control-label">หมวด</label>
                         <div class="col-lg-10">
                             <select class="form-control" ng-model="advise.categoryAdvise" ng-options="cat.nameCategory for cat in advisecateshow.content">
-
                             </select>
                         </div>
                     </div>
