--- a/src/main/webapp/admin_add_parent.html
+++ b/src/main/webapp/admin_add_parent.html
@@ -59,6 +59,12 @@
                                 </div>
                             </div>
                             <div class="form-group">
+                                <label class="col-md-3 control-label"> นักศึกษา :</label>
+                                <div class="col-md-2">
+                                    <input type="text" class="form-control" placeholder="Enter Name Student">
+                                </div>
+                            </div>
+                            <div class="form-group">
                                 <label class="col-md-2 control-label"></label>
                                 <div class="col-md-3">
 
