add search page parent in student

--- a/src/main/webapp/admin_add_student.html
+++ b/src/main/webapp/admin_add_student.html
@@ -60,6 +60,7 @@
                                     <input type="email" class="form-control" placeholder="Enter Email"ng-model="student.email">
                                 </div>
                             </div>
+
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> อาจารย์ที่ปรึกษา :</label>
                                 <div class="col-md-2">
@@ -67,6 +68,75 @@
                                     </select>
                                 </div>
                             </div>
+
+                            <div class="form-group">
+                                <label class="col-md-3 control-label"> ผู้ปกครอง :</label>
+
+                                <div class="col-md-2">
+                                    <input type="text" class="form-control" placeholder="Enter Name Parent" ng-model="parentShow.name" data-toggle="modal" data-target="#complete-dialog">
+                                </div>
+
+                                <div id="complete-dialog" class="modal fade" tabindex="-1">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                                <h4 class="modal-title">เลือกผู้ปกครอง</h4>
+                                            </div>
+                                            <br>
+                                            <div class="modal-body">
+                                                <div class="row">
+                                                    <div class="form-group">
+                                                        <label class="col-md-3 control-label">Search</label>
+                                                        <div class="col-md-5">
+                                                            <input type="parent" class="form-control" placeholder="Enter Parent" ng-model="keyword">
+                                                        </div>
+
+                                                        <div class="col-md-2">
+                                                            <button class="btn btn-info" style="margin-top: -5px" ng-click="parentSearch()">Search</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <table class="table table-striped table-hover ">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>ชื่อ</th>
+                                                                <th>อีเมล์</th>
+                                                                <th>เลือก</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr ng-repeat="par in parent.content">
+                                                                <td>{{par.name}}</td>
+                                                                <td>{{par.email}}</td>
+                                                                <td><a ng-click="selectParent(par)" data-dismiss="modal">เลือก</a></td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="right">
+                                                        <ul class="pagination pagination-sm">
+                                                            <li id="first-page"><a ng-click="firstPage()">&Lt;</a></li>
+                                                            <li id="pre-page" ><a ng-click="prePage()">&lt;</a></li>
+                                                            <li><a>{{currentPage+1}}</a></li>
+                                                            <li id="next-page"><a ng-click="nextPage()">&gt;</a></li>
+                                                            <li id="final-page"><a ng-click="finalPage()">&gg;</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button class="btn btn-danger" data-dismiss="modal">Exit</button>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
                             <div class="form-group">
                                 <label class="col-md-2 control-label"></label>
                                 <div class="col-md-3">
