--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -15,7 +15,12 @@
         <link rel="stylesheet" href="../material/dist/css/ripples.min.css">
         <link rel="stylesheet" href="../material/dist/css/roboto.min.css">
         <script src="../material/jquery-2.1.4.min.js"></script>
-
+     
+        <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui-1.11.4.custom/jquery-ui.min.css">
+        <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui-1.11.4.custom/jquery-ui.structure.min.css">
+        <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui-1.11.4.custom/jquery-ui.theme.min.css">
+        <script src="jquery-ui-1.11.4.custom/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
+        
         <script src="js/angular.min.js"></script>
         <script src="js/angular-router.js"></script>
         <script src="js/app.js"></script>
@@ -50,6 +55,7 @@
                         <br>
 
                         <form class="navbar-form navbar-right">
+                            <label ng-controller="appController" style="color: white">{{account.name}}</label>
                             <br>
                             <h4 align="right"><a href="http://www.rmutk.ac.th/" class="text-success">Rajamangala University of Technology krungthep</a></h4>                        
                         </form>
