--- a/src/main/webapp/advise_show.html
+++ b/src/main/webapp/advise_show.html
@@ -35,7 +35,7 @@
                             <tbody>
                                 <tr ng-repeat="advi in adviseshow.content">
                                     <td>{{advi.idSubject}}</td>
-                                    <td>{{advi.date}}</td>
+                                    <td>{{advi.dates}}</td>
                                     <td>{{advi.title}}</td>
                                     <td>{{advi.categoryAdvise.nameCategory}}</td>
                                     <td>{{advi.detail}}</td>
