--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -14,8 +14,8 @@
         <link rel="stylesheet" href="../material/dist/css/material-fullpalette.min.css">
         <link rel="stylesheet" href="../material/dist/css/ripples.min.css">
         <link rel="stylesheet" href="../material/dist/css/roboto.min.css">
-        <script src="../material/jquery-2.1.4.min.js"></script>
-     
+        <link rel="stylesheet" href="css/custom.css">
+        <script src="material/jquery-2.1.4.min.js"></script>
         <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui-1.11.4.custom/jquery-ui.min.css">
         <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui-1.11.4.custom/jquery-ui.structure.min.css">
         <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui-1.11.4.custom/jquery-ui.theme.min.css">
