--- a/src/main/webapp/behavior_add.html
+++ b/src/main/webapp/behavior_add.html
@@ -6,7 +6,7 @@
             <h4 class="list-group-item-heading">เพิ่มความประพฤติ</h4>
         </div>
         <div class="panel-body">
-            <p class="list-group-item-text">
+            <div class="list-group-item-text">
             <form class="form-horizontal">
                 <fieldset>
                     <div class="form-group">
@@ -16,9 +16,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="text" class="col-lg-2 control-label">วันที่-เวลา</label>
+                        <label for="text" class="col-lg-2 control-label">วันที่</label>
                         <div class="col-lg-10">
-                            <input type="text" class="form-control" name="dateInputBe" ng-model="behavior.dates">
+                            <input class="datepicker-custom form-control" type="text" ng-model="behavior.dates">
                         </div>
                     </div>
                     <div class="form-group">
@@ -42,7 +42,6 @@
                     <div class="form-group">
                         <label for="inputFile" class="col-lg-2 control-label">File</label>
                         <div class="col-lg-10">
-                            <!--<input type="submit" id="input-picture" readonly="" class="form-control floating-label" placeholder="Browse...">-->
                             <input type="file" id="input-picture"> 
                         </div>
                     </div>
@@ -54,7 +53,7 @@
                     </div>
                 </fieldset>
             </form>
-            </p> 
+            </div> 
         </div>
     </div>
 
@@ -66,7 +65,7 @@
             <h3 class="panel-title">ความประพฤติ</h3>
         </div>
         <div class="panel-body">
-            <table class="table table-striped table-bordered">
+            <table class="table table-striped table-hover ">
                 <thead>
                     <tr>
                         <th>ชื่อนักศึกษา</th>
