--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,9 +1,4 @@
-<link rel="stylesheet" href="calendar/jquery-ui.css" />
-<link rel="stylesheet" href="calendar/jquery-ui-timepicker-addon.css" />
-<script src="calendar/jquery-1.10.2.min.js"></script>
-<script src="calendar/jquery-ui.min.js"></script>
-<script src="calendar/jquery-ui-timepicker-addon.js"></script>
-<script src="calendar/jquery-ui-sliderAccess.js"></script>
+
 
 <div class="col-md-10" ng-app="admin_add_information" ng-controller="admin_add_informationController">
     <div class="panel panel-success">
@@ -60,14 +55,14 @@
                         </div>
                     </div>
                 </div>
-                <script type="text/javascript">
+<!--                <script type="text/javascript">
                                     $(function () {
                                         $('#datetimepicker12').datepicker({
                                             inline: true,
                                             sideBySide: true
                                         });
                                     });
-                </script>
+                </script>-->
             </div>
         </div>
     </div>
